--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,315 @@
-.pokemon-card {
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chewy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Potta+One&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  width: 100%;
+  max-width: 850px;
+  margin: auto;
+}
+
+.logo {
+  width: 170px;
+}
+
+.logo img {
+  height: 100%;
+}
+
+.input-wrapper {
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 15px 30px;
+  border-radius: 10px;
+}
+
+input {
+  background-color: #abcbab;
+  font-size: 20px;
+  padding: 5px 20px;
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+  border: none;
+}
+
+input:focus {
+  outline-color: #637763;
+}
+
+input::placeholder {
+  color: rgb(255, 255, 255);
+  font-size: 15px;
+}
+
+.list-wrapper {
+  text-align: center;
+  max-width: 800px;
+  margin: auto;
+}
+
+.pokemon-list__content {
+  background-image: url("../assets/6197.jpg");
+  background-repeat: repeat-y;
+  background-size: contain;
+  margin: auto;
+  min-height: 100vh;
+}
+
+.header {
+  display: flex;
+  padding: 50px 0;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.header h1 {
+  font-size: 60px;
+  font-family: "Permanent Marker", cursive;
+  color: #3c3d3c;
+  letter-spacing: 3px;
+}
+
+.header span {
+  color: #effff0;
+}
+
+.pokemon-wrapper {
   display: inline-block;
-  border: solid 2px black;
-  margin: 20px;
+  width: 150px;
+  height: 200px;
+  margin: 10px;
+  padding: 20px;
+  background-image: url("../assets/354.jpg");
+  background-size: cover;
+  background-blend-mode: screen;
+  border-radius: 15px;
+  box-shadow: 2px 2px 2px rgb(187, 181, 181);
+}
+
+.pokemon-wrapper:hover {
+  opacity: 0.75;
+}
+
+.pokemon-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pokemon-card__image {
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+.pokemon-card__image img {
+  width: 100%;
+  height: 100%;
+}
+
+h2 {
+  font-family: "Permanent Marker", cursive;
+  font-size: 20px;
+  color: rgb(68, 67, 67);
+  text-transform: capitalize;
+  margin-top: 30px;
+}
+
+.pokemon-details {
+  background-image: url("../assets/1082.jpg");
+  background-blend-mode: luminosity;
+  background-size: cover;
+  padding: 20px 70px;
+  height: 100vh;
+}
+
+.pokemon-details__images {
+  height: 130px;
+  text-align: center;
+  position: relative;
+  top: 50px;
+  z-index: 1;
+}
+
+.pokemon-details__images img {
+  height: 100%;
+}
+
+.pokemon-details__description {
+  background: rgba(255, 255, 255, 0.7);
+  padding: 80px 30px 10vh;
+  border-radius: 15px;
+  text-align: center;
+}
+
+.pokemon-details__description h2 {
+  margin: 0;
+  font-family: "Playfair Display", serif;
+  font-size: 70px;
+  color: rgb(44, 44, 44);
+}
+
+.pokemon-details__type {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pokemon-details__type p {
+  margin: 10px 10px;
+  padding: 3px 15px;
+  border-radius: 10px;
+  font-size: 17px;
+  color: #fff;
+}
+
+.pokemon-details__stats {
+  margin: auto;
+  padding: 50px 0;
+}
+
+.pokemon-details__stats li {
+  text-transform: capitalize;
+  font-family: "Open Sans", sans-serif;
+  list-style: none;
+  color: rgb(44, 44, 44);
+}
+
+.pokemon-details_home-link {
+  margin-top: 30px;
+}
+
+.pokemon-details_home-link a {
+  text-decoration: none;
+  color: rgb(110, 110, 110);
+  font-family: "Open Sans", sans-serif;
+  transition: all 0.3s ease;
+}
+
+.pokemon-details_home-link a:hover {
+  color: rgb(31, 31, 31);
+  border-bottom: 1px solid rgb(63, 63, 63);
+}
+
+.normal {
+  background-color: #b2b3b7;
+}
+
+.fighting {
+  background-color: #551412;
+}
+
+.flying {
+  background-color: #afb1d8;
+}
+
+.poison {
+  background-color: #552b80;
+}
+
+.ground {
+  background-color: #915f25;
+}
+
+.rock {
+  background-color: #5f5d5b;
+}
+
+.bug {
+  background-color: #567259;
+}
+
+.ghost {
+  background-color: #272111;
+}
+
+.fire {
+  background-color: #ab1523;
+}
+
+.water {
+  background-color: #3689bb;
+}
+
+.grass {
+  background-color: #48a54c;
+}
+
+.psychic {
+  background-color: #9a2463;
+}
+
+.electric {
+  background-color: #ddd123;
+}
+
+.ice {
+  background-color: #6bc2e7;
+}
+
+.dragon {
+  background-color: #f2932f;
+}
+
+.fairy {
+  background-color: #f09ec4;
+}
+
+.dark {
+  background-color: #131217;
+}
+
+.pokemon {
+  position: relative;
+  height: 100px;
+  width: 100px;
+  background: linear-gradient(to bottom, rgb(254, 0, 1) 50%, white 50%);
+  border-radius: 50%;
+  border: 8px solid black;
+  animation: spin 1s linear infinite;
+  margin: auto;
+}
+
+.pokemon::before {
+  content: "";
+  position: absolute;
+  height: 8px;
+  width: 90px;
+  background: black;
+  top: 45px;
+  transform: translatey(-50%);
+}
+
+.pokemon::after {
+  content: "";
+  position: absolute;
+  height: 38px;
+  width: 38px;
+  border-radius: 50%;
+  background: white;
+  top: 45px;
+  left: 45px;
+  transform: translate(-50%, -50%);
+  box-shadow: inset 0 0 0 8px black, inset 0 0 0 10px white,
+    inset 0 0 0 12px black;
+}
+
+/* Spin Animation */
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
