--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
 
 :root {
-  --primary-font-family: "Permanent Marker", cursive;
-  --secondary-font-family: "Playfair Display, serif;";
+  --primary-font-family: "Permanent Marker", Arial, cursive;
+  --secondary-font-family: "Playfair Display, Arial, serif;";
 }
 
 * {
